# com/swagger_server/models/inline_response200.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class InlineResponse200(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, uuid: str=None, api_key: str=None):  # noqa: E501
+        """InlineResponse200 - a model defined in Swagger
+
+        :param uuid: The uuid of this InlineResponse200.  # noqa: E501
+        :type uuid: str
+        :param api_key: The api_key of this InlineResponse200.  # noqa: E501
+        :type api_key: str
+        """
+        self.swagger_types = {
+            'uuid': str,
+            'api_key': str
+        }
+
+        self.attribute_map = {
+            'uuid': 'UUID',
+            'api_key': 'ApiKey'
+        }
+
+        self._uuid = uuid
+        self._api_key = api_key
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse200':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
+        :rtype: InlineResponse200
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def uuid(self) -> str:
+        """Gets the uuid of this InlineResponse200.
+
+        Unique User ID  # noqa: E501
+
+        :return: The uuid of this InlineResponse200.
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid: str):
+        """Sets the uuid of this InlineResponse200.
+
+        Unique User ID  # noqa: E501
+
+        :param uuid: The uuid of this InlineResponse200.
+        :type uuid: str
+        """
+
+        self._uuid = uuid
+
+    @property
+    def api_key(self) -> str:
+        """Gets the api_key of this InlineResponse200.
+
+        API Key  # noqa: E501
+
+        :return: The api_key of this InlineResponse200.
+        :rtype: str
+        """
+        return self._api_key
+
+    @api_key.setter
+    def api_key(self, api_key: str):
+        """Sets the api_key of this InlineResponse200.
+
+        API Key  # noqa: E501
+
+        :param api_key: The api_key of this InlineResponse200.
+        :type api_key: str
+        """
+
+        self._api_key = api_key
